@@ -208,7 +208,7 @@
 			["C++14"] = "/std:c++14",
 			["C++17"] = "/std:c++17",
 			["C++20"] = "/std:c++20",
-			["C++23"] = "/std:c++latest",
+			["C++23"] = "/std:c++23preview",
 			["C++latest"] = "/std:c++latest"
 		},
 		exceptionhandling = {
