@@ -452,7 +452,7 @@ end
 	function suite.cppdialectCpp23()
 		cppdialect "C++23"
 		prepare()
-		test.contains('/std:c++latest', msc.getcxxflags(cfg))
+		test.contains('/std:c++23preview', msc.getcxxflags(cfg))
 	end
 
 	function suite.cppdialectCppLatest()
